--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .sidebar {
+  min-width: 250px;
+  max-width: 250px;
   background-color: brown;
+  margin-left: 0px;
+  transition:  0.5s;
 }
 
 .row-header{
